--- a/package.json
+++ b/package.json
@@ -18,30 +18,36 @@
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.3",
+    "cloudinary": "^2.4.0",
     "crypto": "^1.0.1",
     "exceljs": "^4.4.0",
+    "formidable": "^3.5.1",
     "framer-motion": "^11.2.10",
+    "google-auth-library": "^9.13.0",
+    "googleapis": "^140.0.1",
     "gsap": "^3.12.5",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "mysql2": "^3.9.7",
-    "next": "^14.2.3",
+    "next": "^14.2.6",
     "next-auth": "^4.24.7",
     "next-use-funnel": "^0.3.2",
     "next.js": "^1.0.3",
     "nodemailer": "^6.9.13",
     "prisma": "^5.17.0",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-async": "^10.0.1",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.3.0",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-timer-hook": "^3.0.7",
     "swr": "^2.2.5",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   },
   "devDependencies": {
+    "@types/fluent-ffmpeg": "^2.1.25",
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
