--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-timer-hook": "^3.0.7",
+    "react-toastify": "^10.0.5",
     "swr": "^2.2.5",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
