--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^18.3.1",
     "react-timer-hook": "^3.0.7",
     "react-toastify": "^10.0.5",
+    "sharp": "^0.33.5",
     "swr": "^2.2.5",
     "unix_to_d-day": "^1.1.3",
     "webpack": "^5.91.0",
