--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chart.js": "^4.4.3",
     "cloudinary": "^2.4.0",
     "crypto": "^1.0.1",
+    "dayjs": "^1.11.13",
     "exceljs": "^4.4.0",
     "formidable": "^3.5.1",
     "framer-motion": "^11.2.10",
@@ -44,7 +45,6 @@
     "react-toastify": "^10.0.5",
     "sharp": "^0.33.5",
     "swr": "^2.2.5",
-    "unix_to_d-day": "^1.1.3",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   },
