--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.3",
+    "cheerio": "^1.0.0",
     "cloudinary": "^2.4.0",
     "crypto": "^1.0.1",
     "dayjs": "^1.11.13",
