--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-timer-hook": "^3.0.7",
     "react-toastify": "^10.0.5",
     "sharp": "^0.33.5",
+    "swiper": "^11.1.14",
     "swr": "^2.2.5",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
@@ -59,6 +60,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.12",
     "typescript": "^5"
